# vyz

./: .gitignore  README.md  README.md~  add_ssh_key_github.sh  git_push.sh
cw-iv-123_nim-game-main/: .clang-format  Makefile
oop/laba1/: 1  O  slova.txt
oop/laba2/: 1.cpp
oop/laba3/: first  main2.cpp  second
oop/лаба 1/: a.out
oop/лаба 2/: 1.cpp  22 (1).cpp  22.cpp  a.out
sem2/proga/: 10zd.c  14zd.c  15zd.c  1zd.c  3zd.c  6zd.c  9.c  message_1.txt  test1.c
sem2/trpo/: Makefile  game
sem2/курсач/: hangman.c
sem3/it/: laba2.1.rar
sem3/oop/: foxes-and-hares-main1.rar
sem4/test/: 1.c  output.txt
sem5/avs/lab2/: .~lock.отчёт.odt#  CMakeLists.txt  CMakePresets.json  Dockerfile  main.cpp  отчёт.odt
sem5/economic/: ПЗ1.docx  задачи.odt  лекция1.docx
sem5/philosophy/: .~lock.1.odt#  1.odt  ИВ-121 Бессонов Алексей.docx
sem5/pvt/: archive_name.tar
курсач/: tematix.txt
курсач.zip/: slova.txt
прога/: 1.c  11zd.c  12zd.c  13zd.c  14zd.c  15zd.c  17zd.c  1zd  2zd.c  3zd.c  4zd.c  5zd.c  6zd.c  7zd.c  8.c  8zd.c  9zd.c  a.out  ip.c  strokad.c  test.c  test2.c
прога/myprog/: 1.c  2.c  4.c  5.c  8.c
сеть/2021_InTeh_lab_10/: « ¡_¤®¯§ ¤ ­¨ï_¢á¥.doc  « ¡_¤®¯§ ¤ ­¨ï_¢á¥_2021.doc
сеть/laba1.1/: 3.html
сеть/laba1.2/: a.html  test.html
сеть/laba1.3/: 2.html  index.html  s5.html
сеть/laba1.31/: head.html  s1.html  s4.html  s5.html
сеть/laba2.1/: 1.html
сеть/laba2.2/: 1.html  script.js
сеть/laba2.3/: 1.html  2.html  frame1.html  frame2.html  frame3.html  frame4.html  script.js
сеть/laba2.4/: 1.2.html  1.html  script.js  script1.js  script2.js
сеть/laba3.1/: 1.css  1.html  index.html  index1.html  script.js
сеть/sait/: 1.html  sript.js  style.css
сеть/лаба 1.1/: 1.html  2.html
сеть/лаба 1.3/: 1.html  2.html  head.html  index.html  main.html  s1.html  s3.html  s4.html  test.html
трпо/: Makefile  MyProject  a.out  ТЗ.odt
(+317 files in other folders)
